client/application/assets/styles/default.less
body, p, label, input, button, select, textarea, .navbar-search {
  font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

@-webkit-keyframes delayedFadeIn {
  0%   { opacity: 0.5; }
  50%  { opacity: 0.5; }
  100% { opacity: 1; }
}

@-webkit-keyframes spin {
  0%   { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@-moz-keyframes delayedFadeIn {
  0%   { opacity: 0.5; }
  50%  { opacity: 0.5; }
  100% { opacity: 1; }
}

@-moz-keyframes spin {
  0%   { -moz-transform: rotate(0deg); }
  100% { -moz-transform: rotate(360deg); }
}

#loading {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9999;
  background-color: rgba(0, 0, 0, 0.5);
  cursor: wait;
  -webkit-animation-name: delayedFadeIn;
  -webkit-animation-duration: 2s;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  -moz-animation-name: delayedFadeIn;
  -moz-animation-duration: 2s;
  -moz-animation-iteration-count: 1;
  -moz-animation-timing-function: linear;

  .indicator {
    @width: 64px;
    @height: 64px;
    position: absolute;
    top: 50%;
    left: 50%;
    width: @width;
    height: @height;
    margin-top: (@height / 2) * -1;
    margin-left: (@width / 2) * -1;
    background: url('application/assets/images/loading.svg') no-repeat 0 0;
    -webkit-animation-name: spin;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-name: spin;
    -moz-animation-duration: 1s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: linear;
  }
}

#login, #signup {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.75);

  h1 {
    min-height: 80px;
    text-indent: -1000px;
    background: url('application/assets/images/logo-prototype.svg') no-repeat 0 0;
    background-size: auto 100%;
  }

  .control-group { margin-bottom: 5px; }

  .pull-left { float: left; }
}

.pre { white-space: pre; }

